--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     text-align: center;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 
 .container {
@@ -8,4 +8,6 @@
     width: 800px;
     background-color: blue;
     margin: auto;
+    display: flex;
+    flex-wrap: wrap;
 }
