--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 * {
     text-align: center;
-    /*border: 1px solid red;*/
+    background-color: peachpuff;
 }
 
 .container {
     height: 800px;
     width: 800px;
-    background-color: blue;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
+}
+
+.square {
+    background-color: white;
+}
+
+.colored {
+    background-color: black;
 }
