--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     margin: auto;
     display: flex;
     flex-wrap: wrap;
+    border: 1px solid black;
 }
 
 .square {
@@ -26,9 +27,9 @@
 }
 
 button {
-    background-color: white;
     margin-top: -5px;
     margin-bottom: 5px;
+    background-color: white;
 }
 
 h2 {
